# 100-days-of-python

./: .gitignore  CLAUDE.md  README.md  calculator.py  main.py  pyproject.toml
blackjack/: main.py
coffe_machine/: main.py
day_19/: etch_a_sketch.py  turtle_race.py
guess_number/: art.py  main.py
quiz_game/: main.py  question_model.py  quiz_brain.py
snake_game/: food.py  main.py  scorebord.py  snake.py
turtle_graphics/: main.py
